# nanobanana-py

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/nanobanana_py/: __init__.py  file_handler.py  icon_processor.py  image_generator.py  server.py  types.py
tests/: __init__.py  conftest.py  test_file_handler.py  test_icon_processor.py  test_image_generator.py  test_image_generator_mock.py  test_types.py
