[project]
name = "nanobanana-py"
version = "0.2.3"
description = "Python MCP server for AI-powered image generation using Google Gemini models - A complete port of nanobanana"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "yazelin", email = "yaze.lin.j303@gmail.com" }
]
keywords = [
    "mcp",
    "model-context-protocol",
    "gemini",
    "google",
    "ai",
    "image-generation",
    "nanobanana",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastmcp>=2.0.0,<3.0.0",
    "httpx>=0.27.0",
    "pillow>=10.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[project.scripts]
nanobanana-py = "nanobanana_py.server:main"

[project.urls]
Homepage = "https://github.com/yazelin/nanobanana-py"
Repository = "https://github.com/yazelin/nanobanana-py"
"Bug Tracker" = "https://github.com/yazelin/nanobanana-py/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nanobanana_py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
